Agregados estilos para directiva

--- a/ejemplo/app/components/edit-card.directive.html
+++ b/ejemplo/app/components/edit-card.directive.html
@@ -1,4 +1,4 @@
-<md-card flex="45" ng-style="{'background-color' : vm.todo.color}">
+<md-card ng-style="{'background-color' : vm.todo.color}">
   <md-card-title>
     <md-card-title-text>
       <div layout="row">
